--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,17 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
     "configurations": [
         {
-            "type": "node-terminal",
-            "name": "JavaScript Debug Terminal",
+            "type": "pwa-node",
             "request": "launch",
-            "cwd": "${workspaceFolder}"
+            "name": "Launch Program",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "program": "${workspaceFolder}\\index.js"
         }
     ]
 }
